# Software-engineering

./: .gitignore  components.md  context.md  task.md
hl_mai_lab_01/package_service/: Dockerfile
hl_mai_lab_01/user_service/: Dockerfile
hl_mai_lab_02/: docker-compose.yml  user.yaml
hl_mai_lab_02/database/: user.cpp  user.h
hl_mai_lab_02/delivery_service/: Dockerfile
hl_mai_lab_03/: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
hl_mai_lab_03/database/: database.cpp  user.cpp  user.h
hl_mai_lab_03/delivery_service/: Dockerfile
hl_mai_lab_03/package_service/: Dockerfile
hl_mai_lab_03/user_service/: Dockerfile
hl_mai_lab_03/user_service/handlers/: user_handler.h
